@@ -531,6 +531,8 @@ Changed in ATK 5.7
 * Added loadDispatch method to atkNode, which loads the output in atkOutput
   but doesn't actually flush anything and make it support a dispatch.tpl
   template if available. [Boy]
+* Made index.php support themes with 'useframes' attribute (defaults to true), 
+  loading themes with this attribute set to false without frames. [Boy]
 - Temporarily removed the 'generate title row' checkbox in atkExportHandler as
   it isn't yet implemented. [Guido]
 - Removed default theme's action_view.tpl as it basically is no difference 
